python/testData/highlighting/fStringTerminatedByQuoteInsideNestedStringLiteralInFormatPartBefore312.py
s = f'{f"""{42:{"<error descr="Python version 3.11 does not allow nesting of string literals with the same quote type inside f-strings">'</error>"}}"""}'